feat: daily update

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,7 +17,6 @@
   "typing": "Typing",
   "view_details": "View details",
   "close": "Close",
-  "no_more": "no_more",
   "retry": "Retry",
   "email": "Email",
   "email_hint": "email_hint",
@@ -46,7 +45,8 @@
   },
   "conversation": "Conversation",
   "conversations": "Conversations",
-  "notifications": "Notifications",
+  "conversation_empty_title": "No conversations yet!",
+  "conversation_empty_description": "Once you start receiving conversations, they'll appear here.",
   "contacts": "Contacts",
   "settings": "Settings",
   "login_title": "Log in to your account",
@@ -102,10 +102,85 @@
   "account": "Account",
   "change_password": "Change password",
   "labels": "Labels",
+  "labels_description": "Labels help you categorize and prioritize conversations and leads. You can assign a label to a conversation or contact using the side panel.",
+  "labels_add": "Add label",
   "custom_attributes": "Custom attributes",
   "audit_logs": "Audit logs",
   "set_availability": "Set availability",
   "read_docs": "Read docs",
   "edit": "Edit",
-  "teams": "Teams"
+  "teams": "Teams",
+  "permission_denied": "Permission denied",
+  "permission_denied_message": "permission_denied_message {name}.",
+  "@permission_denied_message": {
+    "placeholders": {
+      "name": {
+        "type": "String"
+      }
+    }
+  },
+  "permission_request": "Permission requested",
+  "permission_request_message": "You need allow permission {name} to use this feature.",
+  "@permission_request_message": {
+    "placeholders": {
+      "name": {
+        "type": "String"
+      }
+    }
+  },
+  "open_settings": "Open settings",
+  "attachment_image_content": "Picture message",
+  "attachment_audio_content": "Audio message",
+  "attachment_video_content": "Video message",
+  "attachment_file_content": "File Attachment",
+  "attachment_files_content": "File Attachments",
+  "attachment_location_content": "Location",
+  "attachment_fallback_content": "has shared a url",
+  "attachment_exceeds_limit": "File exceeds the 5MB attachment limit",
+  "status": "Status",
+  "assign": "Assign",
+  "priority": "Priority",
+  "none": "None",
+  "no_results": "No results found",
+  "copy": "Copy",
+  "reply": "Reply",
+  "unassigned": "Unassigned",
+  "all_inboxes": "All inboxes",
+  "notifications": "Notifications",
+  "notification_empty_title": "No notifications yet.",
+  "notification_empty_description": "Once you start receiving notifications, they'll appear here.",
+  "notification_no_more": "All notifications loaded",
+  "notification_mark_all_read": "Mark all as read",
+  "notification_push": "Push Notifications",
+  "notification_create_push": "A new conversation is created",
+  "notification_assignee_push": "A conversation is assigned to you",
+  "notification_new_message_push": "You are mentioned in a conversation",
+  "notification_mention_push": "A new message is created in an assigned conversation",
+  "notification_participating_new_message_push": "A new message is created in a participating conversation",
+  "cancel": "Cancel",
+  "delete": "Delete",
+  "oldest": "Oldest",
+  "newest": "Newest",
+  "filter": "Filter",
+  "filter_by_assignee_type": "Filter by assignee type",
+  "filter_by_status": "Filter by status",
+  "filter_by_inbox": "Filter by inbox",
+  "all": "All",
+  "mine": "Mine",
+  "open": "Open",
+  "resolved": "Resolved",
+  "pending": "Pending",
+  "snoozed": "Snoozed",
+  "latest": "Latest",
+  "sort_on_created_at": "Created at",
+  "sort_on_priority": "Priority",
+  "no_more": "That's all!",
+  "last_activity_at_asc": "Last activity: Oldest first",
+  "last_activity_at_desc": "Last activity: Newest first",
+  "created_at_desc": "Created at: Newest first",
+  "created_at_asc": "Created at: Oldest first",
+  "priority_desc": "Priority: Highest first",
+  "priority_asc": "Priority: Lowest first",
+  "waiting_since_asc": "Pending Response: Longest first",
+  "waiting_since_desc": "Pending Response: Shortest first"
 }
