feat: daily update

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,13 +19,18 @@
   "close": "Close",
   "retry": "Retry",
   "email": "Email",
-  "email_hint": "email_hint",
+  "email_hint": "Enter your email",
   "email_invalid": "Enter a valid email",
   "password": "Password",
   "password_hint": "Enter your password",
   "password_invalid": "Enter a valid password",
   "quit": "Quit",
   "error": "Error",
+  "error_not_found": "Resource not found, please try again.",
+  "error_response": "Failed to parse response from server, please try again.",
+  "error_fetching": "There was an error fetching the information, please try again.",
+  "error_no_connection": "You must connect to Wi-fi or a cellular network to get online again.",
+  "error_no_accounts": "You don't have access to any chatwoot accounts",
   "error_message": "Oops, something went wrong. Please try again later. {reason}",
   "@error_message": {
     "placeholders": {
@@ -47,7 +52,12 @@
   "conversations": "Conversations",
   "conversation_empty_title": "No conversations yet!",
   "conversation_empty_description": "Once you start receiving conversations, they'll appear here.",
+  "conversation_unassign": "Unassign conversation",
+  "conversation_self_assign": "Assign to me",
+  "contact": "Contact",
   "contacts": "Contacts",
+  "contacts_empty_title": "No contacts found in this account",
+  "contacts_empty_description": "Start adding new contacts by clicking on the button below",
   "settings": "Settings",
   "login_title": "Log in to your account",
   "login_description": "You are connected to {base_url}.",
@@ -78,6 +88,7 @@
   "change_url_submit": "Verify",
   "change_language": "Change language",
   "message_hint": "Type message...",
+  "message_private_hint": "Only visible to Agents",
   "appearance": "Appearance",
   "appearance_mode": "Mode",
   "appearance_mode_auto": "Auto",
@@ -98,18 +109,35 @@
   "macros": "Macros",
   "automation": "Automation",
   "inboxes": "Inboxes",
+  "inboxes_title": "Inboxes",
+  "inboxes_description": "A channel is the mode of communication your customer chooses to interact with you. An inbox is where you manage interactions for a specific channel. It can include communications from various sources such as email, live chat, and social media.",
   "agents": "Agents",
+  "agents_title": "Agents",
+  "agents_description": "An agent is a member of your customer support team who can view and respond to user messages. The list below shows all the agents in your account.",
   "account": "Account",
   "change_password": "Change password",
+  "change_password_current": "Current password",
+  "change_password_current_hint": "Please enter the current password",
+  "change_password_new": "New password",
+  "change_password_new_hint": "Please enter a new password",
+  "change_password_confirm": "Confirm new password",
+  "change_password_confirm_hint": "Please re-enter your new password",
   "labels": "Labels",
   "labels_description": "Labels help you categorize and prioritize conversations and leads. You can assign a label to a conversation or contact using the side panel.",
   "labels_add": "Add label",
-  "custom_attributes": "Custom attributes",
-  "audit_logs": "Audit logs",
+  "custom_attributes": "Custom Attributes",
+  "custom_attributes_title": "Custom Attributes",
+  "custom_attributes_description": "A custom attribute tracks additional details about your contacts or conversations—such as the subscription plan or the date of their first purchase. You can add different types of custom attributes, such as text, lists, or numbers, to capture the specific information you need.",
+  "custom_attributes_add": "Add Custom Attributes",
+  "audit_logs": "Audit Logs",
+  "audit_logs_title": "Audit Logs",
+  "audit_logs_description": "Audit Logs maintain a record of activities in your account, allowing you to track and audit your account, team, or services.",
   "set_availability": "Set availability",
   "read_docs": "Read docs",
   "edit": "Edit",
   "teams": "Teams",
+  "teams_title": "Teams",
+  "teams_description": "Teams allow you to organize agents into groups based on their responsibilities. An agent can belong to multiple teams. When working collaboratively, you can assign conversations to specific teams.",
   "permission_denied": "Permission denied",
   "permission_denied_message": "permission_denied_message {name}.",
   "@permission_denied_message": {
@@ -182,5 +210,41 @@
   "priority_desc": "Priority: Highest first",
   "priority_asc": "Priority: Lowest first",
   "waiting_since_asc": "Pending Response: Longest first",
-  "waiting_since_desc": "Pending Response: Shortest first"
+  "waiting_since_desc": "Pending Response: Shortest first",
+  "campaigns_live_chat_empty_title": "No live chat campaigns are available",
+  "campaigns_live_chat_empty_description": "Connect with your customers using proactive messages. Click 'Create campaign' to get started.",
+  "campaigns_sms_empty_title": "No SMS campaigns are available",
+  "campaigns_sms_empty_description": "Launch an SMS campaign to reach your customers directly. Send offers or make announcements with ease. Click 'Create campaign' to get started.",
+  "macros_title": "Macros",
+  "macros_description": "A macro is a set of saved actions that help customer service agents easily complete tasks. The agents can define a set of actions like tagging a conversation with a label, sending an email transcript, updating a custom attribute, etc., and they can run these actions in a single click.",
+  "macro_visibility_global": "Public",
+  "macro_visibility_global_description": "Public",
+  "macro_visibility_personal": "This macro is available publicly for all agents in this account.",
+  "macro_visibility_personal_description": "This macro will be private to you and not be available to others.",
+  "understand": "Understand",
+  "confirm_delete": "Confirm delete",
+  "confirm_delete_message": "Are you sure you want to delete \"{name}\"? This action cannot be undone.",
+  "@confirm_delete_message": {
+    "placeholders": {
+      "name": {
+        "type": "String"
+      }
+    }
+  },
+  "logout": "Log out",
+  "logout_confirm": "Are you sure you want to do logout?",
+  "confirm": "Confirm",
+  "server_upgrade_required": "Server upgrade required",
+  "server_upgrade_required_agent_message": "It seems like you are using unsupported Chatwoot server for your mobile app. Please contact your admin to upgrade your Chatwoot server.",
+  "server_upgrade_required_admin_message": "It seems like you are using unsupported Chatwoot server for your mobile app. Upgrading to server version %{minimum_version} or later is required.",
+  "@server_upgrade_required_admin_message": {
+    "placeholders": {
+      "minimum_version": {
+        "type": "String"
+      }
+    }
+  },
+  "snooze_until": "Snooze until",
+  "private": "Private",
+  "tap_to_record": "Tap to record"
 }
