feat: daily update

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,12 +3,12 @@
   "save_changes": "Save changes",
   "profile": "Profile",
   "upload": "Upload",
-  "phone_number": "phone_number",
-  "company_name": "company_name",
+  "phone_number": "Phone number",
+  "company": "Company name",
   "country": "country",
-  "city": "city",
-  "last_activity_at": "last_activity_at",
-  "created_at": "created_at",
+  "city": "City",
+  "last_activity_at": "Last activity",
+  "created_at": "Created at",
   "name": "Name",
   "ascending": "Ascending",
   "descending": "Descending",
@@ -161,6 +161,8 @@
   "labels": "Labels",
   "labels_description": "Labels help you categorize and prioritize conversations and leads. You can assign a label to a conversation or contact using the side panel.",
   "labels_add": "Add label",
+  "labels_search": "Search labels",
+  "labels_search_hint": "Type something...",
   "attributes": "Attributes",
   "custom_attributes": "Custom Attributes",
   "custom_attributes_title": "Custom Attributes",
@@ -293,6 +295,9 @@
   "browser": "Browser",
   "operating_system": "Operating system",
   "add": "Add",
+  "modify": "Modify",
   "assignee": "Assignee",
-  "actions": "Actions"
+  "actions": "Actions",
+  "location": "Location",
+  "phone": "Phone"
 }
