feat: daily updates

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,8 +5,11 @@
   "upload": "Upload",
   "phone_number": "Phone number",
   "company": "Company name",
+  "company_hint": "Enter the company name",
+  "company_invalid": "company_invalid",
   "country": "country",
   "city": "City",
+  "city_hint": "city_hint",
   "last_activity_at": "Last activity",
   "created_at": "Created at",
   "name": "Name",
@@ -80,6 +83,7 @@
   "contacts_empty_title": "No contacts found in this account",
   "contacts_empty_description": "Start adding new contacts by clicking on the button below",
   "contacts_add": "Add contact",
+  "contacts_editor_title": "Contact details",
   "settings": "Settings",
   "settings_notification": "Notification",
   "login_title": "Log in to your account",
@@ -333,5 +337,14 @@
   "call": "Call",
   "message": "Message",
   "mark_auto_offline": "Mark offline automatically",
-  "translate": "Translate"
+  "translate": "Translate",
+  "first_name": "First name",
+  "first_name_hint": "Enter the first name",
+  "first_name_invalid": "first_name_invalid",
+  "last_name": "Last name",
+  "last_name_hint": "Enter the last name",
+  "last_name_invalid": "last_name_invalid",
+  "bio": "Enter the bio",
+  "bio_hint": "bio_hint",
+  "bio_invalid": "bio_hint_invalid"
 }
